[package]
name = "tiger-pid-speed-controller-ros"
version = "0.1.0"
authors = ["Dylan Staatz <dylanstaatz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = "0.9"
rosrust_msg = "0.1"
env_logger = "0.7.1"
error-chain = "0.12.1"
pid = "2.1.0"
rustros_tf = "0.1.0"

